[package]
name = "theme-manager"
version = "0.1.0"
authors = ["sereyvathana <sereyvathana10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["debug", "svg"] }
iced_custom_widget = { git="https://github.com/leang27/iced_custom_widget", branch="master" }
vedas_core = { git="https://github.com/koompi/vedas", branch="dev" }
